--- a/server/resources/[vrp]/tablet/web-side/css.css
+++ b/server/resources/[vrp]/tablet/web-side/css.css
@@ -120,6 +120,14 @@ s {
 	padding: 0 0 0 15px;
 }
 /* ---------------------------------------------------------------------------------------------------------------- */
+#pageDiv2 {
+	float: left;
+	width: 262px;
+	font-size: 13px;
+	line-height: 25px;
+	padding: 0 0 0 15px;
+}
+/* ---------------------------------------------------------------------------------------------------------------- */
 #benefactorBar {
 	width: 1140px;
 	padding: 0 30px;
@@ -219,66 +227,86 @@ s {
 #benefactorBuy {
 	float: left;
 	width: 89px;
-	color: #f4bcc6;
+	color: #95d1b1;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
 	margin-bottom: 3px;
-	background: #d04963;
+	letter-spacing: 1px;
+	background: #2e6e4c;
 }
 
 #benefactorBuy:hover {
-	background: #a63f53;
+	background: #255a3e;
 	transition: all 0.9s;
 }
 
 #benefactorSell {
 	float: left;
 	width: 89px;
-	color: #ccc6f7;
+	color: #95d1b1;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
-	background: #685bc1;
+	margin-bottom: 3px;
+	letter-spacing: 1px;
+	background: #2e6e4c;
 }
 
 #benefactorSell:hover {
-	background: #504692;
+	background: #255a3e;
 	transition: all 0.9s;
 }
 
 #benefactorTax {
 	float: left;
 	width: 89px;
-	color: #caeba3;
+	color: #f1d89b;
 	margin-top: 3px;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
-	background: #71a732;
+	letter-spacing: 1px;
+	background: #a67d1b;
 }
 
 #benefactorTax:hover {
-	background: #577c2a;
+	background: #755813;
 	transition: all 0.9s;
+}
+
+i {
+	float: left;
+	width: 146px;
+	display: block;
+	font-size: 14px;
+	font-weight: 700;
+	font-style: normal;
+	margin-bottom: 5px;
+	margin-right: 15px;
+	padding-bottom: 5px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
+	border-bottom: 1px dotted #ccc;
 }
 
 #benefactorRental {
 	float: left;
 	width: 42px;
-	color: #8ebda3;
+	color: #95d1b1;
+	margin-right: 6px;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
 	margin-bottom: 3px;
 	background: #2e6e4c;
-	margin-right: 6px;
+	letter-spacing: 1px;
 }
 
 #benefactorRentalMoney {
 	float: left;
 	width: 41px;
-	color: #8ebda3;
+	color: #95d1b1;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
@@ -287,23 +315,24 @@ s {
 }
 
 #benefactorRentalMoney:hover, #benefactorRental:hover {
-	background: #39875e;
+	background: #255a3e;
 	transition: all 0.9s;
 }
 
 #benefactorDrive {
 	float: left;
 	width: 89px;
-	color: #f0d396;
+	color: #f1b2bd;
 	margin-top: 3px;
-	background: #bf9334;
 	padding: 6px 0 4px;
 	text-align: center;
 	border-radius: 3px;
+	letter-spacing: 1px;
+	background: #a93b50;
 }
 
 #benefactorDrive:hover {
-	background: #917028;
+	background: #852e3f;
 	transition: all 0.9s;
 }
 /* ---------------------------------------------------------------------------------------------------------------- */
