--- a/server/resources/[vrp]/tencode/web-side/css.css
+++ b/server/resources/[vrp]/tencode/web-side/css.css
@@ -1,18 +1,8 @@
-body,td,th { font-size: 12px; font-family: Arial, Helvetica, sans-serif; color: #666; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
-a,a:link,a:visited,a:active,a:hover { font-family: Arial, Helvetica, sans-serif; font-size: 12px; color: #666; text-decoration: none; }
-div,span,applet,object,iframe,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr { border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent; margin:0; padding:0; }
-:focus { outline:0; }
-img { border:none; }
-::-webkit-scrollbar { width: 0; }
-::selection { background: transparent; color: #666; }
-::-moz-selection { background: transparent; color: #666; }
-
 #divCode {
 	width: 100%;
 	bottom: 100px;
 	display: none;
 	position: fixed;
-	cursor: pointer;
 }
 
 #midCode {
@@ -45,6 +35,35 @@ img { border:none; }
 	border-right: 0;
 	border-top-right-radius: 4px;
 	border-bottom-right-radius: 4px;
+}
+
+#divRadar {
+	width: 100%;
+	bottom: 40px;
+	display: none;
+	position: fixed;
+}
+
+#topRadar {
+	width: 800px;
+	color: #e5e5e5;
+	margin: 0 auto;
+	font-size: 16px;
+	line-height: 24px;
+	text-align: center;
+	text-shadow: 1px 1px #000;
+	font-family: "Jura",sans-serif;
+}
+
+#botRadar {
+	width: 800px;
+	color: #e5e5e5;
+	margin: 0 auto;
+	font-size: 16px;
+	line-height: 24px;
+	text-align: center;
+	text-shadow: 1px 1px #000;
+	font-family: "Jura",sans-serif;
 }
 
 c {
