--- a/server/resources/[vrp]/taskbar/web-side/css.css
+++ b/server/resources/[vrp]/taskbar/web-side/css.css
@@ -1,61 +1,47 @@
-.nicesexytext {
-	width: 100%;
-	z-index: 999;
-	color: #c9d1ee;
-	font-size: 11px;
-	text-align: center;
-	position: absolute;
-	margin: 13px auto 0;
-	letter-spacing: 4.5px;
-	text-shadow: 1px 1px #000;
-	font-family: "Roboto",Arial,Helvetica,sans-serif;
+body, * {
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 
-.divwrap {
-	left: 50%;
-	bottom: 10%;
-	width: 300px;
-	height: 40px;
+.circlewrap {
+	width: 100vw;
+	height: 100vh;
 	display: none;
-	overflow: hidden;
-	position: absolute;
-	background: #33384b;
-	border: 1px solid #949fc5;
-	transform: translate(-50%,-50%);
+	justify-content: center;
+	align-items: center;
 }
 
-.skillprogress {
-	left: 35%;
-	width: 10%;
-	z-index: 99;
-	height: 100%;
-	padding-top: 1%;
-	background: #fff;
-	position: absolute;
-	border-left: 1px solid #949fc5;
-	border-right: 1px solid #949fc5;
+.circlewrap>svg {
+	transform: rotate(-90deg);
+	margin-top: 30%;
 }
 
-.progress {
-	width: 100%;
-	height: 100%;
+.letters {
+	z-index: 9;
+	margin-top: 30%;
+	font-size: 50px;
+	font-weight: 900;
 	position: absolute;
+	font-family: 'Roboto';
+	color: rgba(255,255,255,0.75);
 }
 
-.progress-wrap {
-	height: 100%;
-	overflow: hidden;
-	position: relative;
+#backline {
+	fill: rgba(30,33,44,0.5);
+	stroke: #33384b;
 }
 
-#progress-bar {
-	top: 0;
-	left: 0;
-	width: 50%;
-	z-index: 998;
-	height: 100%;
-	overflow: hidden;
-	position: relative;
-	position: absolute;
-	background-color: #2e6e4c;
+#skillprogress {
+	stroke: #2e6e4c;
+	stroke-dasharray: 100;
+	stroke-dashoffset: calc(100 - var(--val));
+}
+
+#skillgap {
+	stroke: #fff;
+	stroke-dasharray: 100;
+	stroke-dashoffset: calc(100 - var(--val));
+	transform-box: fill-box;
+	transform-origin: center;
 }
