--- a/server/resources/[vrp]/bank/web-side/css.css
+++ b/server/resources/[vrp]/bank/web-side/css.css
@@ -1,11 +1,16 @@
-body,td,th { font-size: 12px; font-family: Arial,Helvetica,sans-serif; color: #313131; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
-a,a:link,a:visited,a:active,a:hover { font-family: Arial,Helvetica,sans-serif; font-size: 12px; color: #888; text-decoration: none; }
+body,td,th { font-size: 12px; font-family: "Roboto",Arial,Helvetica,sans-serif; color: #ccc; cursor: default; vertical-align: baseline; outline: 0; line-height: 1; margin: 0; padding: 0; word-wrap: break-word; }
+a,a:link,a:visited,a:active,a:hover { font-family: "Roboto",Arial,Helvetica,sans-serif; font-size: 12px; color: #ccc; text-decoration: none; }
 div,span,applet,object,iframe,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr { border:0; outline:0; font-size:100%; vertical-align:baseline; background:transparent; margin:0; padding:0; }
-:focus { outline:0; }
 img { border:none; }
+:focus { outline: 0; }
 ::-webkit-scrollbar { width: 0; }
-::selection { background: #333; color: #888; }
-::-moz-selection { background: #333; color: #888; }
+::selection { background: transparent; color: #fff; }
+::-moz-selection { background: transparent; color: #fff; }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button { -webkit-appearance: none; }
+::placeholder { color: #fff; letter-spacing: 2px; }
+textarea:focus, input:focus{ outline: none; }
+button { border: none; background: none; }
 
 #actionmenu {
 	top: 50%;
@@ -16,27 +21,26 @@ img { border:none; }
 	display: none;
 	overflow: auto;
 	position: fixed;
-	background: url("images/background.png");
+	background-color: #222;
 	transform: translate(-50%,-50%);
+	border-radius: 5px;
+	border-bottom: 1px solid #000;
 }
 
 button {
 	top: 50%;
 	left: 50%;
-	width: 30px;
-	height: 30px;
+	font-size: 18px;
 	display: none;
 	position: fixed;
-	background: url("images/x.png");
+	color: #444;
 	transform: translate(-50%,-50%);
-	border: 0;
-	border-radius: 100px;
 	margin-top: -265px;
 	margin-left: 465px;
 }
 
 button:hover {
-	background: rgba(0,0,0,0.1) url("images/x.png");
+	color: #333;
 }
 
 #bank-top {
@@ -49,10 +53,12 @@ button:hover {
 	float: left;
 	letter-spacing: 1.5px;
 	padding: 0 40px 0 0;
+	background-image: url("images/logo-top.png");
+	background-repeat: no-repeat;
 }
 
 #bank-top white {
-	color: #fff;
+	color: #ccc;
 }
 
 #bank-left {
@@ -65,17 +71,21 @@ button:hover {
 #bank-left a {
 	width: 240px;
 	padding: 15px 20px;
-	background-color: #008844;
+	/* background-image: linear-gradient(#f3a000,#d57800); */
+	background-color: #333;
 	float: left;
-	color: #fff;
+	color: #ccc;
 	margin: 0 0 10px 0;
 	border-radius: 4px;
 }
 
+#bank-left a:hover {
+	background-color: #444;
+}
+
 #bank-left texto {
 	width: 100%;
-	font-weight: 700;
-	font-size: 20px;
+	font-size: 16px;
 	padding-bottom: 5px;
 	float: left;
 }
@@ -88,27 +98,26 @@ button:hover {
 
 .title {
 	float: left;
-	color: #cdffef;
+	color: #ccc;
 	width: 647px;
 	font-size: 24px;
-	font-weight: 700;
 	padding: 10px 0 10px 10px;
 	letter-spacing: 1px;
-	border-bottom: 1px dashed #16b080;
+	border-bottom: 1px solid #444;	
 }
 
 .format {
 	float: left;
 	padding: 10px;
 	margin-top: 10px;
-	background: rgba(255,255,255,1);
-	border-radius: 2px;
+	background: #444;
+	border-radius: 4px;
 	box-shadow: 1px 1px rgba(0,0,0,0.1);
 }
 
 .format.active {
-	color: #999446;
-	background: rgba(255,255,190,1);
+	color: #95c5ab;
+	background: #2e6e4c;
 }
 
 .format-left {
@@ -128,96 +137,115 @@ button:hover {
 
 .format-right texto {
 	font-size: 15px;
-	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 }
 
 .format-right b {
-	color: #444;
+	color: #ccc;
 }
 
 .multas {
-	color: #01562c;
-	font-weight: 700;
+	color: #95c5ab;;
 	position: absolute;
-	background: #2dc177;
+	background: #2e6e4c;
 	padding: 12px 12px 11px;
-	margin: -1px 0 0 500px;
-	border-radius: 2px;
+	margin: -1px 0 0 513px;
+	border-radius: 4px;
 }
 
 .multas:hover {
-	background: #31d080;
+	background: #39875e;
 }
 
 .salario {
-	color: #01562c;
-	font-weight: 700;
+	color: #95c5ab;;
 	position: absolute;
-	background: #2dc177;
+	background: #2e6e4c;
 	padding: 12px 12px 11px;
-	margin: -1px 0 0 471px;
-	border-radius: 2px;
+	margin: -1px 0 0 490px;
+	border-radius: 4px;
 }
 
 .salario:hover {
-	background: #31d080;
+	background: #39875e;
 }
 
 .faturas {
-	color: #155e39;
-	font-weight: 700;
+	color: #95c5ab;;
 	position: absolute;
-	background: #2dc177;
+	background: #2e6e4c;
 	padding: 12px 12px 11px;
-	margin: -1px 0 0 500px;
-	border-radius: 2px;
+	margin: -1px 0 0 513px;
+	border-radius: 4px;
 }
 
 .faturas:hover {
-	background: #31d080;
+	background: #39875e;
 }
 
-.menu-depositar {
+.menu-depositar, .menu-sacar, .menu-transferir {
 	float: left;
 	width: 625px;
 	padding: 20px 20px;
-	background: #fff;
+	background: #333;
 	margin-right: 11px;
 	border-radius: 4px;
 	box-shadow: 1px 1px rgba(0,0,0,0.1);
+	color: #ccc;
 }
 
 .deposito, .saque {
 	border: 0;
 	float: left;
 	width: 154px;
-	padding: 14px 20px 13px;
-	font-size: 20px;
+	padding: 15px;
+	font-size: 16px;
 	margin-right: 10px;
 	background: rgba(0,0,0,0.1);
+	color: #ccc;
 	border-radius: 4px;
 }
 
-.depositar, .sacar {
+.transfer, .playerID {
+	border: 0;
+	float: left;
+	width: 154px;
+	padding: 15px;
+	font-size: 16px;
+	margin-right: 10%;
+	margin-top: 1%;
+	background: rgba(0,0,0,0.1);
+	color: #ccc;
+	border-radius: 4px;
+}
+
+.depositar, .sacar, .transferir {
 	width: 100px;
 	text-align: center;
-	color: #155e39;
-	font-weight: 700;
-	background: #2dc177;
-	padding: 15px 10px;
-	font-size: 20px;
+	color: #95c5ab;;
+	background: #2e6e4c;
+	padding: 15px;
+	font-size: 16px;
 	border-radius: 4px;
 	float: left;
 }
 
-.menu-sacar {
-	float: left;
-	width: 625px;
-	padding: 20px;
-	background: #fff;
+.transferir {
+	width: 100px;
+	text-align: center;
+	color: #95c5ab;;
+	background: #2e6e4c;
+	padding: 15px 10px;
+	margin-right: 8.8%;
+	margin-top: -12%;
+	font-size: 16px;
 	border-radius: 4px;
+	float: right;
+}
+
+.depositar:hover, .sacar:hover, .transferir:hover {
+	background: #39875e;
 }
 
 .menu-space {
@@ -225,7 +253,7 @@ button:hover {
 	width: 625px;
 	padding: 20px;
 	background: rgba(255, 255, 255, 0);
-	border-radius: 2px;
+	border-radius: 4px;
 }
 
 .title-sacar {
@@ -234,7 +262,19 @@ button:hover {
 	margin-bottom: 20px;
 }
 
+.title-transferir {
+	width: 284px;
+	float: left;
+	margin-top: 5%;
+}
+
 .title-sacar b {
+	font-size: 22px;
+	display: block;
+	margin-bottom: -5px;
+}
+
+.title-transferir b {
 	font-size: 22px;
 	display: block;
 	margin-bottom: -5px;
