--- a/server/resources/[vrp]/inspect/web-side/css.css
+++ b/server/resources/[vrp]/inspect/web-side/css.css
@@ -1,32 +1,30 @@
-::-webkit-scrollbar { width: 6px; }
-::-webkit-scrollbar-track { background: rgba(26,27,30,0.8); border-radius: 4px; }
-::-webkit-scrollbar-thumb { background: #3f455c; border-radius: 4px; }
-::-webkit-scrollbar-thumb:hover { background: #3f455c; }
+::-webkit-scrollbar { display: none; }
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button { -webkit-appearance: none; }
 
 body {
-	margin: 0;
 	padding: 0;
+	margin: 0;
 	color: #fff;
-	font-family: "Roboto",Arial,Helvetica,sans-serif;
+	font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 * {
 	overflow: hidden;
-	user-select: none;
 	box-sizing: border-box;
+	user-select: none;
 }
 
 .inventory {
-	width: 100vw;
-	height: 100vh;
 	display: none;
-	position: fixed;
-	align-items: center;
 	flex-direction: column;
+	align-items: center;
 	justify-content: center;
-	background: rgba(0,0,0,0.55);
+
+	height: 100vh;
+	width: 100vw;
+
+	background: rgba(0,0,0,0.5);
 }
 
 .innerInventory {
@@ -35,216 +33,151 @@ body {
 }
 
 .sections {
-	height: 589px;
+	height: 415px;
 	display: flex;
 }
 
 .invLeft, .invRight {
-	row-gap: 3px;
-	display: grid;
-	column-gap: 3px;
 	overflow-y: scroll;
-	padding-right: 3px;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+	display: grid;
+	grid-template-columns: 1fr 1fr  1fr 1fr 1fr;
+	column-gap: 5px;
+	row-gap: 5px;
 }
 
 .item {
-	width: 115px;
-	height: 145px;
 	display: flex;
-	border-radius: 4px;
 	flex-direction: column;
-	text-shadow: 1px 1px #000;
-	background: rgba(26,27,30,0.50);
+
+	/* width: 110px;
+	height: 135px; */
+    width: 112px;
+    height: 132px;
+    background: rgba(0, 0, 0, 0.25);
+	border: 1px solid rgba(255, 255, 255, 0.25);
 }
 
 .populated {
-	background: rgba(25,28,35,0.75);
-	background-size: 86% !important;
+	background-size: 90% !important;
+	background-position: center !important;
+	background-repeat: no-repeat !important;
 }
 
 .populated:hover, .hoverControl {
-	background: #30354a;
+	background-color: #1f1f1fb9 !important;
 }
 
 .item .top {
 	display: flex;
-	color: #8c8c8c;
-	font-size: .70rem;
 	justify-content: space-between;
+	font-size: .65rem;
+	color: #8c8c8c;
 }
 
 .itemAmount {
-	margin: 15px 15px 0 0;
+	margin: 10px 10px 0 0;
 }
 
 .itemWeight {
-	margin: 15px 0 0 15px;
+	margin: 10px 0 0 10px;
 }
 
 .item .itemname {
+	margin-top: auto;
 	align-self: center;
 
 	width: 100%;
 	color: #d0d0d0;
+	padding: 7px 10px;
 
-	padding: 8px 10px;
-	font-size: .68rem;
+	letter-spacing: 1px;
+	font-size: .64rem;
 	text-align: center;
 	white-space: nowrap;
-	letter-spacing: 1px;
 	text-overflow: ellipsis;
 	text-transform: uppercase;
 
-	background: rgba(71,79,106,0.5);
-}
-
-.item .durability {
-	width: 100%;
-	height: 3px;
-	margin-top: auto;
-	background: #2e6e4c;
+	text-shadow: 1px 1px #000;
+	background-image: url('https://cdn.discordapp.com/attachments/734975009914880048/793610856738717726/bottom.png');
+    background-position: bottom;
+    background-repeat: no-repeat;
 }
 
 .invMiddle {
 	display: flex;
-	align-items: center;
 	flex-direction: column;
+	align-items: center;
 }
 
-input {
+.invMiddle div {
+	font-size: .75rem;
 	text-align: center;
-}
 
-input::placeholder {
-	color: #afb8d2;
-}
+	border: 1px solid rgba(255,255,255,0.12);
+	background: rgba(0, 0, 0, 0.80);
+    opacity: 0.5;
+	letter-spacing: 1px;
 
-.invMiddle div, .invMiddle input {
-	border: 0;
 	width: 70%;
-	outline: none;
-	color: #afb8d2;
-	padding: 16px 0;
-	font-size: 12px;
+	margin-top: 12px;
+	padding: 16px 4px;
+}
+
+.invMiddle input {
+	font-size: .75rem;
+	letter-spacing: 1px;
+	border: 1px solid rgba(255,255,255,0.12);
+    background: rgba(0, 0, 0, 0.80);
+    opacity: 0.5;
+	padding: 16px 4px;
+}
+
+.invMiddle input, .invMiddle input::placeholder {
 	text-align: center;
-	border-radius: 4px;
-	margin-bottom: 12px;
+	appearance: none;
+	outline: none;
+	border-radius: 0;
+	width: 70%;
+	color: #FFF;
+}
+
+.myInfos {
+	align-self: flex-start;
+	padding: 0 0 25px 16px;
+}
+
+.infosContent {
+	padding-top: 12px;
+	font-size: .70rem;
+	color: #b3b3b3;
+}
+
+.infosContent span {
 	letter-spacing: 1px;
-	background: rgba(64,71,92,0.75);
-}
-#weight {
-	max-width: 1338px;
+	margin-right: 18px;
 }
 
-#weightTextLeft {
-	float: left;
-	color: #9c9c9c;
-	font-size: 12px;
-	min-width: 580px;
-	max-width: 580px;
-	text-align: right;
-	margin-right: 15px;
-	border-radius: 4px;
-	margin-bottom: 15px;
-	letter-spacing: 1px;
+.myInfos b {
+	font-size: 1.5rem;
+	padding-bottom: 15px;
 }
 
-#weightBarLeft {
-	float: left;
-	min-height: 10px;
-	max-height: 10px;
-	min-width: 596px;
-	max-width: 596px;
-	margin-bottom: 5px;
-	border-radius: 4px;
-	background: #3f455c;
+.myInfos i {
+	color: #b3b3b3;
+	font-weight: 300;
 }
 
-#weightTextRight {
-	float: right;
-	color: #9c9c9c;
-	font-size: 12px;
-	min-width: 580px;
-	max-width: 580px;
-	text-align: left;
-	margin-left: 15px;
-	border-radius: 4px;
-	margin-bottom: 15px;
-	letter-spacing: 1px;
-}
-
-#weightBarRight {
-	float: right;
-	min-height: 10px;
-	max-height: 10px;
-	min-width: 596px;
-	max-width: 596px;
-	border-radius: 4px;
-	margin-bottom: 5px;
-	background: #3f455c;
-}
-
-#weightContent {
-	float: left;
-	min-height: 10px;
-	max-height: 10px;
-	max-width: 596px;
-	border-radius: 4px;
-	background: #737ea0;
-	transition: all 0.9s;
-}
-
-.ui-helper-hidden-accessible {
-	display: none;
-}
-
-.ui-tooltip {
-	z-index: 9999;
-	color: #d6d9df;
-	font-size: 11px;
-	border-radius: 4px;
-	position: absolute;
-	background: #212430;
-	letter-spacing: 1px;
-	padding: 20px 20px 15px;
-}
-
-.ui-tooltip:hover {
-	display: none;
-}
-
-.ui-tooltip item {
-	float: left;
-	font-size: 14px;
-	min-width: 200px;
-	letter-spacing: 2px;
-}
-
-.ui-tooltip legenda {
-	float: left;
-	min-width: 200px;
-	margin-top: 10px;
-	padding-top: 6px;
-	line-height: 20px;
-	letter-spacing: 2px;
-	border-top: 1px solid #40475c;
-}
-
-.ui-tooltip description {
-	float: left;
-	color: #626977;
-	font-size: 10px;
-	max-width: 200px;
-	margin-top: 10px;
-}
-
-.ui-tooltip s {
-	color: #494f5a;
-	padding: 0 5px;
+.myInfos s {
+	color: #f0f0f0;
 	text-decoration: none;
 }
 
-.ui-tooltip r {
-	color: #626977;
+.slotNumber {
+	width: 24px;
+	height: 24px;
+	padding: 6px 0 0;
+	font-size: 0.6rem;
+	text-align: center;
+	color: rgba(19,22,28,1.0);
+	background: rgba(255,255,255,0.75);
 }
